<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#009688"
    android:backgroundTint="#009688"
    tools:context=".HomeActivity">

    <LinearLayout
        android:id="@+id/te"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#4CAF50"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="CALCULADORA NOTAS"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/nomeAlunoText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/input_round"
            android:ems="10"
            android:hint="@string/nome_do_aluno"
            android:inputType="text"
            android:paddingStart="10dp" />

        <EditText
            android:id="@+id/nomeDisciplinaText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_round"
            android:ems="10"
            android:hint="@string/nome_da_disciplina"
            android:inputType="text"
            android:paddingStart="10dp" />

        <EditText
            android:id="@+id/notaAtividadeNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_round"
            android:ems="10"
            android:hint="@string/nota_atividade_1"
            android:inputType="numberDecimal"
            android:paddingStart="10dp" />

        <EditText
            android:id="@+id/notaAtividade2Number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_round"
            android:ems="10"
            android:hint="@string/nota_atividade_2"
            android:inputType="numberDecimal"
            android:paddingStart="10dp" />

        <EditText
            android:id="@+id/notaProvaNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_round"
            android:ems="10"
            android:hint="@string/nota_prova"
            android:inputType="numberDecimal"
            android:paddingStart="10dp" />

        <EditText
            android:id="@+id/qtdeFaltasNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_round"
            android:ems="10"
            android:hint="@string/qtde_faltas"
            android:inputType="number"
            android:paddingStart="10dp" />

        <Button
            android:id="@+id/avaliarAlunoButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:backgroundTint="#FF9800"
            android:text="@string/avaliar_aluno" />

        <Button
            android:id="@+id/limparButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="#CDDC39"
            android:text="@string/limpar" />

        <Button
            android:id="@+id/deslogarButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="#8BC34A"
            android:text="@string/deslogar" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>